@@ -1,5 +1,8 @@
 Changes with Apache 2.0.34-dev
 
+  *) Be more vocal about what AcceptMutex values we allow, to make
+     us closer to how 1.3 does it. [Jim Jagielski]
+
   *) Get nph- CGI scripts working again.  PRs 8902, 8907, 9983
      [Jeff Trawick]
 
